# nxc

./: .env.example  .gitignore  NXC Image & File.sxcu  NXC Paste.sxcu  README.md  nginx.conf  start
backend/: Cargo.toml
backend/migrations/: 0001_init.sql
backend/src/: config.rs  db.rs  main.rs  models.rs  routes.rs  security.rs  webhooks.rs
backend/templates/: view.html
cli/: Cargo.toml
cli/src/: main.rs
frontend/: package.json  svelte.config.js
frontend/src/: app.css  app.html
frontend/src/lib/: User.svelte.ts  oembed.json
frontend/src/routes/: +layout.svelte  +page.svelte
