[package]
name = "nxs"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web Server Framework
axum = { version = "0.7", features = ["multipart"] }
axum-extra = { version = "0.9", features = ["cookie"] }

# Async & Runtime
tokio = { version = "1.49", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "trace", "cors", "compression-full"] }
async-trait = "0.1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-native-tls", "postgres", "chrono", "uuid"] }

# Templating
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4"

# Authentication & Security
oauth2 = { version = "4.4", features = ["rustls-tls"] }
jsonwebtoken = { version = "10.3", features = ["use_pem", "rust_crypto"] }
argon2 = "0.5"
password-hash = "0.5"
rand = "0.8"
time = { version = "0.3", features = ["macros"] }

# Serialization & Data
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.20", features = ["v4", "serde"] }

# HTTP Client
reqwest = { version = "0.13", default-features = false, features = ["json", "multipart", "native-tls", "http2"] }

# Utilities
anyhow = "1.0"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
